<!--
  ~ Verantwortlicher Mitarbeiter: linosteiner
  ~ Letzte Änderung: 16.05.2026
  -->
<resources>
    <string name="app_name" translatable="false">FitApp</string>
    <string name="appHeader">Welcome to FitApp!</string>
    <string name="bmiExplanation">The BMI is calculated as follows:\nBMI = m / l²</string>
    <string name="openBmiCalculator">Open BMI Calculator</string>
    <string name="bmiCalculator">BMI Calculator\t</string>
    <string name="weightInKg">Weight in kg</string>
    <string name="heightInCm">Height in cm</string>
    <string name="calculateBMI">Calculate BMI</string>
    <string name="bmiResultHeader">BMI</string>
    <string name="bmiResult">BMI Result</string>
    <string name="main">Main</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="calculator">Calculator</string>
    <string name="rating">Rating</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="detailView">Detail View</string>
    <string name="generalName">General: %s</string>
    <string name="specificName">Specific: %s</string>
    <string name="minValue">Min Value: %s</string>
    <string name="maxValue">Max Value: %s</string>
    <string name="newFruit">+ Add new fruit</string>
    <string name="addFruitTextView">Add Fruit</string>
    <string name="addFruitHint">Add fruit</string>
    <string name="users">Users</string>
    <string name="newLogin">New Login</string>
    <string name="loginName">Login Name</string>
</resources>